cmake_minimum_required(VERSION 3.30)
project(leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(leetcode
        Intervals/228.cpp
        Intervals/56.cpp
        Intervals/57.cpp
        Intervals/452.cpp
        Stack/20.cpp
        Stack/20v2.cpp
        Stack/71.cpp
        Stack/155.cpp
        Stack/150.cpp
        Stack/150v2.cpp
        Stack/224.cpp
        "Linked List/141v2.cpp"
        "Linked List/141.cpp"
        "Linked List/2v2.cpp"
        "Linked List/2.cpp"
        "Linked List/21.cpp"
        "Linked List/138.cpp"
        "Linked List/92.cpp"
        "Linked List/19.cpp"
        "Linked List/82.cpp"
        "Linked List/61.cpp"
        "Linked List/86.cpp"
        "Linked List/146.cpp"

)
