cmake_minimum_required(VERSION 3.30)
project(leetcode)

set(CMAKE_CXX_STANDARD 23)

add_executable(leetcode
        Backtracking/22.cpp
        Backtracking/79.cpp
        "Divide & Conquer/108.cpp"
        "Divide & Conquer/148.cpp"
        "Divide & Conquer/427.cpp"
        "Divide & Conquer/23.cpp"
        "Kadane's Algorithm/53 DP.cpp"
        "Kadane's Algorithm/918.cpp"
        "Binary Search/35.cpp"
        "Binary Search/74.cpp"
        "Binary Search/162.cpp"
        "Binary Search/33.cpp"
        "Binary Search/34 STL.cpp"
        "Binary Search/153.cpp"
        "Binary Search/4.cpp"
        "Kadane's Algorithm/53.cpp"
        "Binary Search/34.cpp"
        Heap/215.cpp
        Heap/502.cpp
        Heap/373.cpp
        Heap/295.cpp
        "Bit Manipulation/67.cpp"
        "Bit Manipulation/190.cpp"
        "Bit Manipulation/191v2.cpp"
        "Bit Manipulation/136v2.cpp"
        "Bit Manipulation/137.cpp"
        "Bit Manipulation/201.cpp"
        Math/9.cpp
        Math/66.cpp
        Math/172.cpp
        Math/69.cpp
        Math/50.cpp
        Math/149.cpp
        "Bit Manipulation/190v2.cpp"
        "Bit Manipulation/191.cpp"
        "Bit Manipulation/136.cpp"
)
